0.7.0
* spf: new module: Sprintf module (2008-09-13)
* log: new module: Logging module (2008-09-09)
* bis: new module: Bit input stream (2008-08-20)
* gzp: new module: GZip base module (2008-06-28)
* cbf: new module: circulair buffer (2008-06-02)
* lbf: new module: lineair buffer (2008-05-29)
* lxf: config.fs/make.fs/readme added (2008-05-23)
* stc: bug fix in +field (2008-05-23)
* gzf: new module: GZip file (2008-05-07)
* gzs: new module: GZip stream (2008-05-07)
* act: new words: act-clear, act-execute?
* act,acn extends bct,bcn (2008-04-24)
* bcn: new words: bcn-cell@,bcn-cell!
* bct: new word: bct-execute?
* bct,bcn,bci extends bnt,bnn,bni (2008-04-14)
* bnt,bnn,bni: new modules: Generic binary tree (2008-04-06)
* a32: new module: Adler32 algorithm (2008-04-03)
* chs: chs-char? bug fixed
* SP-Forth: config.fs/make.fs/readme added
* dist: also zip file with cr/lf line-endings
* iForth: config.fs/make.fs/readme added
* fsm: new module: Finite State Machine (2008-03-05)
* fst: new module: FSM State (2008-03-05)
* ftr: new module: FSM Transition (2008-03-05)
* snl: new word: snl-execute? (2008-03-05)
0.6.0
* tos: new word: tos-set-writer,tos-flush (2008-02-21)
* bct: new word: bct-clear
* nct: word nct-delete-all renamed to nct-clear
* dcl: word dcl-delete-all renamed to dcl-clear
* scl: word scl-delete-all renamed to scl-clear
* nct,nnt,str,act,bct,arg,bar,car,crc,dcl,dnl,hnn,hnt,hcn,hct,msc,nfe,snl,
  scl,tis,xis: new word: ...-(free)
* dom: new module: Document Object Model (2008-01-06)
* rdg: new module: Distributed Random Generator (2007-12-27)
* tst: new word ?str for module testing strings (2007-12-24)
* tis: new word tis-match-set
* tis: new word tis-scan-set
* chs: chs-char? return false in place of an exception if outside range
* enm: new module: Enumeration (2007-12-12)
* Stack notation changed to ANSish (2007-12-06)
! stc: structures are changed to ANS structures (2007-12-04)
* est: new module: String with escaped characters (2007-12-03)