@@ -2,7 +2,7 @@
 \
 \                 bar - the bit array module in the ffl
 \
-\               Copyright (C) 2006  Dick van Oudheusden
+\              Copyright (C) 2006-2008  Dick van Oudheusden
 \  
 \ This library is free software; you can redistribute it and/or
 \ modify it under the terms of the GNU General Public
@@ -20,7 +20,7 @@
 \
 \ ==============================================================================
 \ 
-\  $Date: 2008-02-21 20:31:18 $ $Revision: 1.11 $
+\  $Date: 2008-10-04 14:56:56 $ $Revision: 1.12 $
 \
 \ ==============================================================================
 
@@ -42,7 +42,7 @@ include ffl/stc.fs
 ( The bar module implements a bit array. )
 
 
-2 constant bar.version
+3 constant bar.version
 
 
 ( Bit array structure )
@@ -51,26 +51,32 @@ begin-structure bar%       ( -- n = Get the required space for a bar variable )
   field: bar>length
   field: bar>size            \ the size of bits
   field: bar>bits
+  field: bar>mask            \ the unused bits mask
 end-structure
 
+
+( Private database )
+                             \ the mask for unused bits
+create bar.mask  255 c, 127 c, 63 c, 31 c, 15 c, 7 c, 3 c, 1 c,
 
 
 ( Array creation, initialisation and destruction )
 
 : bar-init         ( +n bar -- = Initialise the array with length n)
   >r
-  1 max                      \ at least one bit in the array
+  1 max                              \ at least one bit in the array
   
-  dup #bits/char
-  /mod swap 0<> IF
-    1+
-  THEN
+  dup #bits/char 1- + #bits/char /   \ calculate the size of the array in bytes
   
   dup r@ bar>size !
+
+  2dup #bits/char * swap -           \ calculate number of unused bits
+  chars bar.mask + c@                \ get mask for unused bits
+  r@ bar>mask !
   
-  dup chars allocate throw   \ allocate the array
-  
-  tuck swap 0 fill           \ reset all bits
+  dup chars allocate throw           \ allocate the array
+
+  tuck swap 0 fill                   \ reset all bits
   
   r@ bar>bits   !
   r> bar>length !
@@ -104,7 +110,6 @@ end-structure
 : bar-offset?      ( +n bar -- flag = Check if the offset n is valid in the array )
   0 swap bar>length @ within
 ;
-
 
 
 ( Member words )
@@ -168,6 +173,73 @@ end-structure
 ;
 
 
+: bar-clear-unused  ( bar -- = Clear the unused bits in the bit array )
+  dup  bar>size @ 1- chars   \ Move to the last byte in the array
+  over bar>bits @ +
+  swap bar>mask @
+  over c@ AND                \ Fetch the byte, clear the unused bits ..
+  swap 2drop \ c!                    \ .. and store
+;
+
+
+( Private bit array word )
+
+: bar^execute      ( xt bar1 bar2 -- = Execute xt for byte in both sets: [ char1 char2 -- char3 ] and store the result in bar2 )
+  swap >r
+  tuck dup bar>bits @ swap bar>size @  \ S: bar2 xt bits2 size2
+  r@ bar>size @ min                    \ Calculate size smallest array
+
+  r@ bar>bits @ swap bounds ?DO        \ Loop over array
+    2dup c@ I c@
+    rot execute                        \   Execute xt with bytes from both arrays
+    over c!
+    char+
+  1 chars +LOOP
+
+  >r over bar>size @ r> 
+  swap r> bar>size @ - 0 max           \ Calculate the extra size in bar2
+
+  bounds ?DO                           \ Loop over the remaining of array2
+    dup 0 I c@ 
+    rot execute                        \   Execute xt with zero
+    I c!
+  1 chars +LOOP
+  drop
+
+  bar-clear-unused                     \ Clear the unused bits
+;
+
+
+( Bit array words )
+
+: bar^move         ( bar1 bar2 -- = Move bar1 into bar2 )
+  >r
+  dup bar>size @  r@ bar>size @ <> IF
+    r@  bar>bits @  free throw         \ Free the bit array
+    dup bar>size @ dup
+    r@  bar>size !                     \ Set the size from bar1
+    chars allocate throw               \ Allocate the new bit array and ..
+    r@  bar>bits !                     \ .. store it
+  THEN
+  dup bar-length@ r@ bar>length !
+  bar>bits @  r@ bar>bits @  r> bar>size @ cmove  \ Copy the array from bar1 into bar2
+;
+
+
+: bar^or           ( bar1 bar2 -- = OR the bit arrays bar1 and bar2 and store the result in bar2 )
+  ['] OR -rot bar^execute
+;
+
+
+: bar^and          ( bar1 bar2 -- = AND the bit arrays bar1 and bar2 and store the result in bar2 )
+  ['] AND -rot bar^execute
+;
+
+
+: bar^xor          ( bar1 bar2 -- = XOR the bit arrays bar1 and bar2 and store the result in bar2 )
+  ['] XOR -rot bar^execute
+;
+
 
 ( Bit set words )
 
@@ -201,10 +273,20 @@ end-structure
 ;
 
 
-: bar-set          ( bar -- = Set all bits in the array )
-  dup bar>bits @ swap bar>size @ -1 fill
+: bar-set-list     ( nu .. n1 u bar -- = Set n1 till nuth bits in the array )
+  swap
+  0 ?DO
+    tuck bar-set-bit
+  LOOP
+  drop
 ;
 
+
+: bar-set          ( bar -- = Set all bits in the array )
+  dup bar>bits @  over bar>size @  -1 fill  \ Set all the bits in the array
+
+  bar-clear-unused                \ Clear unused bits
+;
 
 
 ( Bit reset words )
@@ -236,6 +318,15 @@ end-structure
     2drop
   THEN
   rdrop
+;
+
+
+: bar-reset-list   ( nu .. n1 u bar -- = Reset n1 till nuth bits in the array )
+  swap
+  0 ?DO
+    tuck bar-reset-bit
+  LOOP
+  drop
 ;
 
 
@@ -353,6 +444,7 @@ end-structure
   ." bar:" dup . cr
   ."  length:" dup bar>length ? cr
   ."  size  :" dup bar>size   ? cr
+  ."  mask  :" dup bar>mask   ? cr
   ."  bits  :" ['] bar-emit-bit swap bar-execute cr
 ;
 
