@@ -20,7 +20,7 @@
 \
 \ ==============================================================================
 \ 
-\  $Date: 2006-03-30 17:25:40 $ $Revision: 1.2 $
+\  $Date: 2008-10-04 14:56:56 $ $Revision: 1.3 $
 \
 \ ==============================================================================
 
@@ -104,6 +104,38 @@ t{  3 b2 bar-get-bit ?true  }t
 t{  5 b2 bar-get-bit ?true  }t
 t{ b2 bar-count 7 ?s }t
 
+\ bit lists
+t{ b2 bar-reset }t
+t{ 0 1 5 6 4 b2 bar-set-list }t
+
+t{ 0 b2 bar-get-bit ?true  }t
+t{ 1 b2 bar-get-bit ?true  }t
+t{ 2 b2 bar-get-bit ?false }t
+t{ 3 b2 bar-get-bit ?false }t
+t{ 4 b2 bar-get-bit ?false }t
+t{ 5 b2 bar-get-bit ?true  }t
+t{ 6 b2 bar-get-bit ?true  }t
+
+t{ -3 -4 -5 3 b2 bar-set-list }t
+
+t{ b2 bar-count 7 ?s }t
+
+t{ 0 b2 bar-set-list }t
+
+t{ 5 3 1 3 b2 bar-reset-list }t
+
+t{ 0 b2 bar-get-bit ?true  }t
+t{ 1 b2 bar-get-bit ?false }t
+t{ 2 b2 bar-get-bit ?true  }t
+t{ 3 b2 bar-get-bit ?false }t
+t{ 4 b2 bar-get-bit ?true  }t
+t{ 5 b2 bar-get-bit ?false }t
+t{ 6 b2 bar-get-bit ?true  }t
+
+t{ -7 -5 -3 -1 4 b2 bar-reset-list }t
+
+t{ b2 bar-count ?0 }t
+
 \ bit ranges
 t{ b2 bar-reset }t
 t{ 5  1 b2 bar-set-bits }t
@@ -127,7 +159,6 @@ t{ 5 b2 bar-get-bit ?false }t
 t{ 6 b2 bar-get-bit ?true  }t
 t{ 4 0 b2 bar-count-bits 3 ?s }t
 
-
 \ execute
 
 : bar-test ( n f - n )
@@ -135,6 +166,76 @@ t{ 4 0 b2 bar-count-bits 3 ?s }t
 ;
 
 t{ 0 ' bar-test b2 bar-execute 17 ?s }t
+
+\ bar 
+
+t{ 15 bar-new value b3 }t
+
+t{ b3 bar-set   b3 bar-count 15 ?s }t
+
+t{ b3 bar-reset b3 bar-count 0  ?s }t
+t{ b2 bar-set   b2 bar-count 7  ?s }t
+t{ b1 bar-reset b1 bar-count 0  ?s }t
+
+t{ 7 4 b3 bar-set-bits }t
+
+t{ b3 b2 bar^move }t
+
+t{    b2 bar-count 7 ?s }t
+t{ 3  b2 bar-get-bit ?false }t
+t{ 4  b2 bar-get-bit ?true  }t
+t{ 10 b2 bar-get-bit ?true  }t
+t{ 11 b2 bar-get-bit ?false }t
+
+t{ 6 1 b1 bar-set-bits }t
+
+t{ b1 b2 bar^or }t
+
+t{ b2 bar-count 10 ?s }t
+t{ 0  b2 bar-get-bit ?false }t
+t{ 1  b2 bar-get-bit ?true  }t
+t{ 10 b2 bar-get-bit ?true  }t
+t{ 11 b2 bar-get-bit ?false }t
+
+
+t{ b3 b2 bar^move }t
+t{ b1 b2 bar^and }t
+
+t{ b2 bar-count 3 ?s }t
+t{ 3  b2 bar-get-bit ?false }t
+t{ 4  b2 bar-get-bit ?true  }t
+t{ 6  b2 bar-get-bit ?true  }t
+t{ 7  b2 bar-get-bit ?false }t
+
+t{ b3 b2 bar^move }t
+t{ b1 b2 bar^xor }t
+
+t{ b2 bar-count 7 ?s }t
+t{ 0  b2 bar-get-bit ?false }t
+t{ 1  b2 bar-get-bit ?true  }t
+t{ 3  b2 bar-get-bit ?true  }t
+t{ 4  b2 bar-get-bit ?false }t
+t{ 6  b2 bar-get-bit ?false }t
+t{ 7  b2 bar-get-bit ?true  }t
+t{ 10 b2 bar-get-bit ?true  }t
+t{ 11 b2 bar-get-bit ?false }t
+
+t{ b3 b2 bar^move    }t
+t{ b1 b3 bar^move    }t
+
+t{ b2 b1 bar^xor     }t
+t{ b1 bar-count 5 ?s }t
+
+t{ b3 b1 bar^move    }t
+t{ b2 b1 bar^and     }t
+t{ b1 bar-count 3 ?s }t
+
+t{ b3 b1 bar^move    }t
+t{ b2 b1 bar^or      }t
+t{ b1 bar-count 8 ?s }t
+
+
+\ t{ b3 bar-free }t
 
 t{ b2 bar-free }t
 
